--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,51 @@
+@inproceedings{4,
+  title={Array data layout for the reduction of cache conflicts},
+  author={Manjikian, Naraig and Abdelrahman, Tarek},
+  booktitle={Proceedings of the 8th International Conference on Parallel and Distributed Computing Systems},
+  pages={1--8},
+  year={1995},
+  organization={Citeseer}
+}
+
+@article{5,
+  title={Cache conscious data layout organization for conflict miss reduction in embedded multimedia applications},
+  author={Kulkarni, Chidamber and Ghez, C and Miranda, Miguel and Catthoor, Francky and De Man, Hugo},
+  journal={Computers, IEEE Transactions on},
+  volume={54},
+  number={1},
+  pages={76--81},
+  year={2005},
+  publisher={IEEE}
+}
+
+@incollection{6,
+  title={Layer assignment techniques for low energy in multi-layered memory organizations},
+  author={Brockmeyer, Erik and Durinck, Bart and Corporaal, Henk and Catthoor, Francky},
+  booktitle={Designing Embedded Processors},
+  pages={157--190},
+  year={2007},
+  publisher={Springer}
+}
+
+@book{7,
+  title={Memory issues in embedded systems-on-chip: optimizations and exploration},
+  author={Panda, Preeti Ranjan and Dutt, Nikil D and Nicolau, Alexandru},
+  year={1999},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{8,
+  title={Data memory organization and optimizations in application-specific systems},
+  author={Panda, P Ranjan and Dutt, Nikil D and Nicolau, Alexandru and Catthoor, Francky and Vandecappelle, Arnout and Brockmeyer, Erik and Kulkarni, Chidamber and De Greef, Eddy},
+  journal={IEEE Design \& Test of Computers},
+  number={3},
+  pages={56--57},
+  year={2001},
+  publisher={IEEE}
+}
+
+
+
 @inproceedings{abraham1999automatic,
   title={Automatic and efficient evaluation of memory hierarchies for embedded systems},
   author={Abraham, Santosh G and Mahlke, Scott A},
