--- a/LayoutStorageOpt.tex
+++ b/LayoutStorageOpt.tex
@@ -49,7 +49,7 @@ The memory accesses have an important contribution on the overall energy consump
 The scope of this work is the reduction of the overall energy consumption by increasing the utilization of the function units and decreasing the number of memory accesses.
 The presented methodology is tested using a number of benchmark applications with irregularities on their access scheme.
 Potential gains are calculated based on the energy models both for the processing and the memory part of the system.
-The improvement on the energy consumption after efficient interleaving and mapping of data is approximately between 40\% and 80\% for the studied benchmarks.
+The improvement on the energy consumption after efficient interleaving and mapping of data is approximately between 40\% and 80\% for the complete system and the studied benchmarks.
 \end{abstract}
 
 \category{D.2.2}{Design Tools and Techniques}{Design, Methodologies}
@@ -102,16 +102,15 @@ Section~\ref{sec:methodology} presents the general work-flow and the sequence of
 In Section~\ref{sec:platform} the target platform is described accompanied by a detailed description of the employed SIMD architecture and the memory models, while the set of benchmarks and their characteristics are analysed in Section~\ref{sec:applications}. 
 Results of applying the described exploration methodology to the targeted applications are shown in Section~\ref{sec:results}, while conclusions are drawn in Section~\ref{sec:conclusion}. 
 
-
-\section{Motivational Example}
-\label{sec:motivational}
-
 A large number of papers have demonstrated the importance of the memory organization to the overall system energy consumption. 
 As shown in \cite{Gonzalez1996} memory contributes around 40\% to the overall power consumption in general purpose systems. 
 Especially for embedded systems, the memory subsystem accounts for up to 50\% of the overall energy consumption \cite{Che09} and the cycle-accurate simulator presented in \cite{Ben99} estimates that the energy expenditures in the memory subsystem range from 35\% up to 65\% for different architectures. 
 The breakdown of power consumption for a recently implemented embedded system presented in \cite{Hul11} shows that the memory subsystem consumes more than 40\% of the leakage power on the platform. 
 According to \cite{tcm}, conventional allocation and assignment of data done by regular compilers is suboptimal. 
 Performance loss is caused by stalls for fetching data and data conflicts for different tasks, due to the limited size of memory and the competition between tasks. 
+
+\section{Motivational Example}
+\label{sec:motivational}
 
 To illustrate the sub-optimal utilization of SIMD architectures using conventional allocation and assignment of data, the simple example of Alg.~\ref{alg:motivation} is used.
 In this example, we assume that the desired result is always the sum of 4 elements from arrays \textit{A, B, C and D}. 
@@ -123,6 +122,7 @@ For example, the interleaving of every fourth line within the combined array ($A
 
 \begin{algorithm}[t]
 \SetAlgoNoLine
+$N \leftarrow 100$ \newline
 \For{($i = 0; i < N; i+4$)}{
         ${result(i) = A(i) + B(i) + C(i) + D(i)}$\;
 }
@@ -130,28 +130,73 @@ For example, the interleaving of every fourth line within the combined array ($A
 \label{alg:motivation}
 \end{algorithm}
 
-The data-to-memory mapping is presented in Fig.~\ref{fig:motivation}. 
+The initial data representation for the arrays \textit{A, B, C and D} is shown in Fig.\ref{fig:motivation}(a). 
+The array elements that are accessed during the execution of the motivational example are marked with colors, in contrast to the elements that are not accessed.
+The array elements are drawn in 25 lines with 4 elements on each line only for a better visual representation.
+At this point there is no mapping to the memory architecture and no constrain regarding the number of lines or their width on the memory design.
+The interleaving of the arrays \textit{A, B, C and D} is shown in Fig.\ref{fig:motivation}(c). 
+Each line of the new interleaved array contains one elements from the initials arrays.
+For example, the first line consists of the elements \textit{A(0), B(0), C(0) and D(0)}. 
+The result of the interleaving is the construction of blocks consisting of 4 coloured elements followed by blocks with 12 redundant elements.
+
+The data-to-memory mapping for the initial set of data is presented in Fig.~\ref{fig:motivation}(b). 
 The memory architecture consists of four memory banks and the overall memory size is enough to fit the four arrays.
 The conventional approach maps each array in a separate bank.
-If the four arrays are interleaved, the mapping distributes the data through the banks.
-The first four elements are respectively from arrays A, B, C and D and so forth.
+The clustered memory architecture is a more energy efficient approach compared to a monolithic approach with one larger memory bank.
+The data-to-memory mapping for the constructed interleaved array is presented in Fig.~\ref{fig:motivation}(d).
+The array is split into four parts and stored in the four different banks using the same memory architecture.
+Each of the lines of the interleaved array is stored in the bank corresponding to the modulo of the array line divided by 4.
+For example, line $x$ is stored in bank $x \bmod 4$.
 As a result only one forth of the array A can be found on the first bank in contrast to the non-interleaving case, in which the whole array A is mapped on the first bank.
 
 \begin{figure}
 \centering
-	\caption{Data-to-memory mapping for motivational example}	
+	\includegraphics[width = 0.9\linewidth]{Images/motivation2.eps}
+	\caption{Motivational Example. Representation of the initial set of data (a) and the interleaved set of data (b). Data-to-memory mapping for the initial (c) and the interleaved data (d) on a clustered scratch-pad memory architecture.}	
 	\label{fig:motivation}
-	\includegraphics[scale = 0.5]{Images/motivation.eps}
 \end{figure}
 
-A quick estimation for the difference in the energy consumption between the two approaches can be calculated using a simple energy model for the system.
-We can assume a system architecture with an ADD FU that performs operations over 4 words at a time and a memory to processor path that has a width of 4 words. 
+A quick estimation for the difference in the number of memory accesses between the two approaches presented in Fig.~\ref{fig:motivation} can be made.
+We can assume a system architecture with an SIMD ADD FU that performs operations over 4 words at a time and a memory to processor path that has a width of 4 words. 
 Each array element is assumed to have the size of one word.
-The register file at the processor can only store the iteration variable $i$ and 5 words, which are the variables result, A, B, C and D.
-Without interleaving of data the number of memory accesses for each loop iteration is 4, because the elements $A(i)$, $B(i)$, $C(i)$ and $D(i)$ are stored in different memory banks.
-Thus, the energy consumption for reading is 75\% lower when the data are interleaved.
-The performance is also higher as there are 75\% less memory accesses.
-The energy consumption due to memory leakage is also lower, as the access time for the memory and the execution time of the algorithm are shorter.
+The register file at the processor level can only store the iteration variable $i$ and 5 words, which are the variables \textit{result, A, B, C and D}.
+Without interleaving of data the number of memory accesses for each loop iteration is 4, because the elements \textit{A(i), B(i), C(i) and D(i)} are stored in different lines and different memory banks or one larger bank.
+The overall number of memory accesses is:
+	\begin{equation}
+		\textit{25 loop iterations $\times$ 4 accesses per iterations = 100 memory accesses}.
+	\end{equation}	 
+After performing the data interleaving exploration there is only one memory access for each loop iteration, because the elements \textit{A(i), B(i), C(i) and D(i)} are stored in one memory line in the same bank.
+The overall number of memory accesses is:
+	\begin{equation}
+		\textit{25 loop iterations $\times$ 1 accesses per iteration = 25 memory accesses}.
+	\end{equation}	 	
+
+A quick estimation for the difference in the energy consumption between the approaches presented in Fig.~\ref{fig:motivation} can be calculated using a simple energy model for the memory banks.
+We assume that the energy cost of accessing a memory bank is 1E, while the average leakage energy in the time needed for the execution of one loop iteration is 0.3E. 
+The corresponding access and leakage numbers for a four times larger memory that can fit all the data together is  3E and 1.2E, respectively. 
+The numbers reflects the fact that as a first order approximation access energy increases sub linearly with increased memory size, while leakage increases linearly with memory size. 
+The energy consumption for a large memory with non-interleaved data is:
+	\begin{equation}
+		\textit{100 $\times$ 3E + 100$\times$ 1.2E = 420E}.
+	\end{equation}	
+In this case there is a performance loss and an increased leakage energy, because all the accesses has to be done sequentially on the same memory.	
+The energy consumption for a clustered memory architecture with non-interleaved data is:
+	\begin{equation}
+		\textit{100 $\times$ 1E + 4$\times$ 100$\times$ 0.3E = 220E}.
+	\end{equation}	
+The energy consumption for a clustered memory architecture with interleaved data is:
+	\begin{equation}
+		\textit{25 $\times$ 1E + 1$\times$ 25$\times$ 0.3E = 32.5E}.
+	\end{equation}			
+	 is 75\% lower when the data are interleaved.
+It should be noted that the leakage energy in the last case is considered only for the one bank that is always accesses.
+The memory banks that store redundant data is assumed that are turned into retention mode to minimize leakage.
+The simple estimations presented in equations (1)-(5) shows that an interleaving optimization results in a 75\% reduction in the number of accesses.
+A memory optimization based on an energy efficient clustered memory architecture can achieve an important energy reduction.
+The energy gains are even greater when interleaved data are mapped into an efficient memory architecture.
+The observations for this simple example motivates the further exploration of the data interleaving and the data-to-memory mapping for applications with irregularities on their accesses. 
+%The performance is also higher as there are 75\% less memory accesses.
+%The energy consumption due to memory leakage is also lower, as the access time for the memory and the execution time of the algorithm are shorter.
 
 \section{Related work}
 \label{sec:related}
@@ -189,6 +234,13 @@ The current work combines and expands the interleaving exploration presented in 
 \section{System Design Exploration Work-flow}
 \label{sec:methodology}
 
+\begin{figure}
+\centering
+	\includegraphics[scale = 0.5]{Images/Workflow.eps} 
+	\caption{Methodology steps}
+	\label{fig:workflow}
+\end{figure}
+
 The systematic exploration of interleaving options and data to memory mapping possibilities is necessary.
 The exploration space consists of the potential combinations between the different arrays and the different scratch-pad memory architectures, which combine memories of different types and sizes.
 The overall work-flow of this work is presented in Fig.\ref{fig:workflow}. 
@@ -199,21 +251,7 @@ The second step is the interleaving exploration, which explores all different op
 The result of the interleaving is a set of data with a reduced number of holes.
 The next step is the mapping of the interleaved data set to the clustered memory architecture.
 
-\begin{figure}
-\centering
-	\caption{Methodology steps}
-	\label{fig:workflow}
-	\includegraphics[scale = 0.5]{Images/Workflow.eps} 
-\end{figure}
-
 \subsection{Formal Model Representation of Access Pattern }
-
-\begin{figure}
-\centering
-	\caption{Extraction of access pattern from application code}
-	\label{fig:pattern}
-	\includegraphics[scale = 0.5]{Images/AHpattern.eps} 
-\end{figure}
 
 A representation model for the access pattern is employed in order to formally present each step of the methodology.
 The model presented in \cite{Ang13} is a generic model suitable for irregular iteration spaces on arrays.
@@ -224,6 +262,13 @@ Otherwise, there is a hole in the access pattern represented with an H(Hole) as 
 The sequence of accesses and holes is usually repeated periodically, because normally the loop conditions are not totally random.
 Thus we can define the frequency of each access pattern.
 The analysis of the application code results in the access patterns and their corresponding frequencies, which is the necessary input for the next step on the work-flow.
+
+\begin{figure}
+\centering
+	\includegraphics[scale = 0.5]{Images/AHpattern.eps} 
+	\caption{Extraction of access pattern from application code}
+	\label{fig:pattern}
+\end{figure}
 
 %\textit{Discussion about polyhedral and enumerative approaches}
 %\textit{Analysis of A-H model based on Angeliki}
@@ -255,9 +300,9 @@ Thus, the number of overall memory access in the second case is reduced in half 
 
 \begin{figure}
 \centering
+	\includegraphics[scale = 0.5]{Images/Algebra.eps} 
 	\caption{Example of combination between two arrays and their access patterns}
 	\label{fig:algebra}
-	\includegraphics[scale = 0.5]{Images/Algebra.eps} 
 \end{figure}
 %\textit{Algorithm for exploring data interleaving}
 
@@ -298,9 +343,9 @@ Each word is an array elements in our case.
 
 \begin{figure}
 \centering
+	\includegraphics[scale = 0.5]{Images/Architecture.eps} 
 	\caption{Exploration options and system knobs depending on a general platform architecture}
 	\label{fig:arch}
-	\includegraphics[scale = 0.5]{Images/Architecture.eps} 
 \end{figure}
 
 \subsection{Memory Models}
@@ -353,7 +398,7 @@ The interleaving is easy because the four arrays has the same pattern.
 Further interleaving within the array can result into even longer sequences of useful elements.
 The access pattern is repeated for every four elements (1A-3H), so the scaling for the different word lengths (4, 8 and 16) is expected to be good. 
 \item SOR benchmark has a more irregular access pattern.
-The interleaving exploration provides sequences of 3 or 6 sequential useful elements.
+The interleaving exploration provides sequences of three or six sequential useful elements.
 Thus, the utilization on the SIMD architecture is expected to be lower.
 \item FFT benchmark has an irregular pattern during the access of the pilot matrices. 
 The interleaving exploration for FFT is presented in \cite{sharma2013data}.
@@ -400,9 +445,9 @@ Both he number of memory accesses and the energy per access are reduced.
 
 \begin{figure}
 \centering
+	\includegraphics[scale = 0.5]{Images/Example.eps} 
 	\caption{Motivational Example}
 	\label{fig:example}
-	\includegraphics[scale = 0.5]{Images/Example.eps} 
 \end{figure}
 
 The normalized energy consumption for the motivational example is presented in Fig.\ref{fig:example}.
@@ -416,9 +461,9 @@ This is explained by the nature of the application that offers good interleaving
 
 \begin{figure}
 \centering
+	\includegraphics[scale = 0.5]{Images/sor.eps} 
 	\caption{SOR Benchmark}
 	\label{fig:sor}
-	\includegraphics[scale = 0.5]{Images/sor.eps} 
 \end{figure}
 
 The normalized energy consumption for the SOR benchmark is presented in Fig.\ref{fig:sor}.
@@ -432,9 +477,9 @@ The integrated approach exploit on a better way the few interleaving options by 
 
 \begin{figure}
 \centering
+	\includegraphics[scale = 0.5]{Images/fft.eps} 
 	\caption{FFT Benchmark}
 	\label{fig:fft}
-	\includegraphics[scale = 0.5]{Images/fft.eps} 
 \end{figure}
 
 The normalized energy consumption for the FFT benchmark is presented in Fig.\ref{fig:fft}.
@@ -445,9 +490,9 @@ The energy gains for a word length of 8 are significantly high, because blocks o
 
 \begin{figure}
 \centering
+	\includegraphics[scale = 0.5]{Images/mest.eps} 
 	\caption{Motion Estimation Benchmark}
 	\label{fig:mest}
-	\includegraphics[scale = 0.5]{Images/mest.eps} 
 \end{figure}
 
 The normalized energy consumption for the motion estimation benchmark is presented in Fig.\ref{fig:mest}.
